apps/media/nestmtx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestmtx
  namespace: nestmtx
  labels:
    app: nestmtx
spec:
  selector:
    app: nestmtx
  ports:
    - name: rtmp
      port: 1935
      targetPort: 1935
    - name: rtsp-udp-rtp
      port: 8000
      protocol: UDP
      targetPort: 8000
    - name: rtsp-udp-rtcp
      port: 8001
      protocol: UDP
      targetPort: 8001
    - name: webrtc-udp
      port: 8189
      protocol: UDP
      targetPort: 8189
    - name: hls
      port: 8888
      targetPort: 8888
    - name: webrtc
      port: 8889
      targetPort: 8889
    - name: srt
      port: 8890
      targetPort: 8890
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nestmtx-external
  namespace: nestmtx
  labels:
    app: nestmtx
spec:
  selector:
    app: nestmtx
  ports:
    - name: http
      port: 2000
      targetPort: 2000
      protocol: TCP
    - name: https
      port: 2001
      targetPort: 2001
      protocol: TCP
    - name: rtsp-tcp
      port: 8554
      targetPort: 8554
      protocol: TCP
    - name: rtsp-udp-rtp
      port: 8000
      targetPort: 8000
      protocol: UDP
    - name: rtsp-udp-rtcp
      port: 8001
      targetPort: 8001
      protocol: UDP
    - name: webrtc
      port: 8889
      targetPort: 8889
      protocol: TCP
    - name: webrtc-udp
      port: 8189
      targetPort: 8189
      protocol: UDP
  type: LoadBalancer
  loadBalancerIP: 192.168.10.48
