apps/media/nestmtx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nestmtx
  namespace: nestmtx
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "nestmtx.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nestmtx-external
          port: 2001
          weight: 1
